# ivs-project

./: .editorconfig  .gitignore  INSTALL.md  README.md  hodnoceni.txt  skutecnost.txt
plan/: xkucha28_xsirov00_xbenci01_xnecka00_plan.txt  xlogin01_xlogin02_xlogin03_xlogin04_plan.txt
src/: .eslintrc.js  .prettierrc.json  Doxyfile  Makefile  calc.cpp  package.json  profiling.cpp  tailwind.config.js
src/frontend/: package.json
src/frontend/src-tauri/: Cargo.toml  tauri.conf.json
src/frontend/src-tauri/src/: mathlib.rs  stddev.rs
src/src/: App.vue
src/src-tauri/: Cargo.toml  tauri.conf.json
src/src-tauri/icons/: icon.icns
src/src-tauri/src/: frontend.rs  main.rs  mathlib.rs  middleware.rs  stddev.rs
src/src/components/: BaseButton.vue  HelloWorld.vue  InfoCard.vue  LargeSwitch.vue
