[package]
name = "calculator"
version = "0.1.0"
description = "Calculator"
authors = ["xkucha28 Josef Kuchař", "xsirov00 Matej Sirovatka", "xbenci01 Šimon Benčík", "xnecka00 Šimon Neckař"]
license = "GPL-3.0"
repository = "https://github.com/JosefKuchar/ivs-project"
default-run = "calculator"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
dec = "0.4.8"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "stddev"
path = "src/stddev.rs"

[[bin]]
name = "calculator"
path = "src/main.rs"
